# lua_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/lua_app/: Cargo.toml
crates/lua_app/src/: main.rs
crates/lua_bytecode/: Cargo.toml
crates/lua_bytecode/src/: main.rs
crates/lua_compiler/: Cargo.toml
crates/lua_compiler/src/: lexer.rs  lib.rs  opcode.rs  token.rs
crates/lua_compiler/src/ast/: expr.rs  mod.rs  stmt.rs  visitor.rs
crates/lua_compiler/src/codegen/: binder.rs  builder.rs  expr_emit.rs  func_comp.rs  jump.rs  mod.rs  reg_alloc.rs  scope.rs  stmt_emit.rs  types.rs
crates/lua_compiler/src/parser/: expr.rs  func.rs  mod.rs  primary.rs  stmt.rs  table.rs
crates/lua_compiler/tests/: parser_tests.rs
crates/lua_core/: Cargo.toml
crates/lua_core/src/: function.rs  gc_string.rs  lib.rs  metatable.rs  proto.rs  string_pool.rs  table.rs  thread.rs  types.rs  upvalue.rs  userdata.rs  value.rs
crates/lua_core/src/gc/: collector.rs  finalize.rs  gc_object.rs  gc_ref.rs  header.rs  mark.rs  mod.rs  strategy.rs  sweep.rs  weak.rs
crates/lua_core/tests/: value_tests.rs
crates/lua_stdlib/: Cargo.toml
crates/lua_stdlib/src/: base.rs  catalog.rs  coroutine.rs  debug.rs  dump.rs  io.rs  lib.rs  math.rs  os.rs  package.rs  string.rs  table.rs
crates/lua_stdlib/tests/: stdlib_integration_tests.rs
crates/lua_vm/: Cargo.toml
crates/lua_vm/src/: execute.rs  lib.rs
crates/lua_vm/src/state/: call_info.rs  lua_state.rs  mod.rs  stack.rs
crates/lua_vm/tests/: integration_tests.rs
docs/: glossary.md
docs/rust_migration/: deviation_log.md  phase_0_report.md  type_mapping_table.md
docs/rust_migration/tasks/: P1.1-types-value.md
examples/: arithmetic.lua  more_tests.lua  return_val.lua  test_global.lua  test_math.lua  test_math2.lua  test_math3.lua
tests/lua/: step01_basic.lua  step02_logic.lua  step03_table.lua
tests/lua/alien_signals/: bit.lua  constants.lua  engine.lua  example.lua  graph.lua  init.lua  primitives.lua  scheduler.lua  tracer.lua
tests/lua/basic/: syntax_error.lua  test_arithmetic.lua  test_basic.lua  test_print.lua
tests/lua/bytecode/: test_bytecode.lua  test_bytecode_debug.lua
tests/lua/control_flow/: test_break_counter.lua  test_break_for.lua  test_break_minimal.lua  test_break_nested.lua  test_break_simple.lua  test_for_simple.lua  test_if.lua  test_if_basic.lua  test_if_comparison.lua  test_if_else.lua  test_if_elseif.lua  test_if_eq_simple.lua  test_if_in_while.lua  test_if_logic.lua  test_if_nested.lua  test_if_simple.lua  test_if_truthy.lua  test_simple_if.lua  test_simple_if_while.lua
tests/lua/functions/: factorial.lua  test_call_success.lua  test_closure_simple.lua  test_direct_call.lua  test_functions.lua  test_multiret.lua  test_simple_call.lua  test_syntax_sugar.lua  test_table_constructor_multret.lua  test_vararg.lua  test_vararg_simple.lua  test_vararg_table.lua
tests/lua/integration/: helper_workflow_chunk.lua  test_closure_pipeline.lua  test_coroutine_scheduler.lua  test_env_metatable_loader.lua  test_loadfile_dofile_workflow.lua
tests/lua/regressions/: test_call_pipeline.lua  test_logical_return_combo.lua  test_lvalue_matrix.lua  test_lvalue_pipeline.lua  test_move_bug.lua  test_multret_edges.lua  test_return_bug.lua  test_short_circuit_materialization.lua  test_upvalue_close.lua  test_value_pipeline.lua  test_vm_self_limitation.lua
tests/lua/runtime/: test_arg.lua  test_arg_index.lua  test_arg_minimal.lua  test_arg_negative.lua  test_arg_simple.lua  test_arg_table.lua  test_arg_very_simple.lua  test_global_access.lua  test_globals.lua  test_register.lua
tests/lua/stdlib/: test_collectgarbage.lua  test_collectgarbage_count.lua  test_collectgarbage_simple.lua  test_coroutine_basic.lua  test_coroutine_closures.lua  test_coroutine_errors.lua  test_coroutine_generators.lua  test_coroutine_status.lua  test_coroutine_values.lua  test_debug.lua  test_gcinfo.lua  test_gcinfo_return.lua  test_gcinfo_simple.lua  test_getfenv.lua  test_io_debug.lua  test_io_minimal.lua  test_io_type.lua  test_iolib.lua  test_iolib_core.lua  test_iolib_simple.lua  test_print_gcinfo.lua  test_setfenv.lua  test_setfenv_detailed.lua
tests/unit/: README.md
tools/: compare_bytecode.ps1  compare_vm_trace.ps1  rust_env_check.ps1  rust_quality_gate.ps1
(+3 files in other folders)
