[package]
name = "lua_app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua 5.1 CLI application: REPL and script runner (lua_app)"
# Build as binary, not library
autobins = true

[[bin]]
name = "lua_app"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
# lua_core     = { path = "../lua_core" }     # uncomment in Phase 5
# lua_compiler = { path = "../lua_compiler" } # uncomment in Phase 5
# lua_vm       = { path = "../lua_vm" }       # uncomment in Phase 5
# lua_stdlib   = { path = "../lua_stdlib" }   # uncomment in Phase 5

[lints]
workspace = true
