[package]
name = "lua_bytecode"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua 5.1 bytecode dumper/printer tool (lua_bytecode)"
# Build as binary, not library
autobins = true

[[bin]]
name = "lua_bytecode"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
# lua_core     = { path = "../lua_core" }     # uncomment in Phase 5
# lua_compiler = { path = "../lua_compiler" } # uncomment in Phase 5

[lints]
workspace = true
