[package]
name = "lua_compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua 5.1 compiler frontend: OpCode, lexer, parser, AST, codegen"

[dependencies]
thiserror.workspace = true
# lua_core = { path = "../lua_core" }  # uncomment in Phase 2

[lints]
workspace = true
