[package]
name = "lua_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua 5.1 runtime core: types, Value, GC objects, string pool, Table, Function, Upvalue, Thread, Userdata"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
