[package]
name = "lua_stdlib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua 5.1 standard libraries: base, math, string, table, io, os, coroutine, debug, package"

[dependencies]
thiserror.workspace = true
lua_core = { path = "../lua_core" }
lua_compiler = { path = "../lua_compiler" }
lua_vm   = { path = "../lua_vm" }

[dev-dependencies]

[lints]
workspace = true
