[package]
name = "lua_vm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua 5.1 virtual machine: LuaState, stack, 38-opcode dispatch, call/return, trace/debug"

[dependencies]
thiserror.workspace = true
lua_core     = { path = "../lua_core" }     # Phase 3
lua_compiler = { path = "../lua_compiler" } # Phase 3

[lints]
workspace = true
